--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 *.pyc
 *.ini
 *.h5
+*.DS_Store
 _archive/
 pages/__pycache__/
 pages/
+data/bpr_image
+models/BPR.py
+models/BPR9.pt
 codes/load_classify_hip.py
